--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.0.0",
-    "nodemon": "^2.0.22",
-    "bcrypt": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "morgan": "^1.10.0"
-
+    "mongoose": "^9.0.0",
+    "morgan": "^1.10.1",
+    "nodemon": "^2.0.22"
   }
 }
